--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.ref-btn, .btn{
+    position: relative;
+    margin-top: 15px;
+    padding: 11px 23px;
+    background-color: cadetblue;
+    color: rgb(34, 53, 224);
+    font-size: 15px;
+    /* box-shadow: -4 -5px -10px rgb(45, 44, 44); */
+    box-shadow: 4px 3px 10px rgb(45, 44, 44), -4px -3px 10px rgb(45,44,44) ;
+    z-index: 1;
+    font-weight: bold;
+    cursor: pointer;
+}
+.btn::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform: scaleX(0);
+    background-color: white;
+    transform-origin: left;
+    transition:transform 1s;
+    z-index: -1;
+}
+.btn:hover::before{
+    transform: scaleX(1);
+}
+
+.ref-btn::before{
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: white;
+    z-index: -1;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 1s;
+}
+.ref-btn:hover::before{
+    transform: scaleX(1);
+}
+
+#tour-box:hover > :not(:hover){
+    opacity: 0.6;
+    filter: grayscale(1.2) blur(1.2px);
+}
